--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node-addon-api": "^1.6.3"
+    "node-addon-api": "^1.6.3",
+    "ws": "^6.2.1"
   },
   "devDependencies": {
     "node-gyp": "^4.0.0"
